add: feature auto encode template

--- a/index.html
+++ b/index.html
@@ -144,25 +144,18 @@
     <div class="container">
         <div class="modal-content">
             <div class="logo">
-                <img src="https://cdn11.bigcommerce.com/s-p5kwdjxgic/images/stencil/742x220/joikenlogo_navy_1632580683__40884.original.png" alt="" srcset="">
+                <img src="assets/images/halo-soft-logo-500x300.png" alt="Logo Tool">
             </div>
             <div class="modal-header">
-                <h5 class="modal-title" id="layoutImageBannerLabel">CODE GENERATOR: Layout Image Banner</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h5 class="modal-title" id="codeGeneratorLabel">CODE GENERATOR</h5>
             </div>
             <div class="modal-body">
                 <h1 class="mb-3">Choose Layout</h1>
                 <select id="layout-selector" class="custom-select custom-select-lg mb-3">
                     <option value="">Choose Layout</option>
-                    <option value="img_left">Image Left</option>
-                    <option value="img_right">Image Right</option>
-                    <option value="img_full">Image Full</option>
-                    <option value="text_full">Text Full</option>
                 </select>
                 <form class="code_genderator">
-                    <div class="accordion" id="layoutImageBanner">
+                    <div class="accordion" id="codeGenerator">
                         <!-- <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0">
@@ -263,7 +256,6 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary btn-clone-html" data-clipboard-action="copy"
                     data-clipboard-target="#bannermarketing1code">Copy code</button>
             </div>
@@ -279,6 +271,7 @@
     <script src="assets/js/clipboard.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/generator_code.js"></script>
+    <script src="assets/libs/html_entities/vendor/he.js"></script>
 </body>
 
 </html>
